# scribe-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: __init__.py  health.py
app/core/: config.py
tests/: conftest.py  test_health.py
